# RenEngine

./: .gitmodules  CMakeLists.txt  INTEGRANTES.txt  README.md
Arcanoid/: CMakeLists.txt
Arcanoid/src/: Ball.cpp  Ball.h  Brick.cpp  Brick.h  DoubleBall.cpp  DoubleBall.h  PowerUp.cpp  PowerUp.h  main.cpp
Engine/: CMakeLists.txt
Engine/src/: Engine.h
Engine/src/core/: Application.cpp  Application.h  AudioPlayer.cpp  AudioPlayer.h  Window.cpp  Window.h
Engine/src/physics/: CollisionListener.cpp  CollisionListener.h  PhysicsEngine.cpp  PhysicsEngine.h
Engine/src/renderer/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  Mesh.cpp  Mesh.h  PhysicsObject.cpp  PhysicsObject.h  PointLight.h  Polyhedron.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  TextRenderer.cpp  TextRenderer.h  Vertex.cpp  Vertex.h
Engine/src/utils/: Projections.h  Texture.cpp  Texture.h
assets/shaders/base/: fragment.frag  vertex.vert
assets/shaders/text/: vertex.vert
